# scrap

./: .gitignore  README.md  api.py  app.py  langgraph.json  main.py  pyproject.toml  requirements.txt  streamlit_frontend.py  test_accuracy.py
agent/: __init__.py  agent.py  graph.py  nodes.py
agent/utils/: __init__.py  cache.py  constants.py  extractor.py  helpers.py  llm.py  scraper.py  search.py  states.py
docs/: research-endpoint.md
